--- a/webapps/pages/cca/auction-cca-table.css
+++ b/webapps/pages/cca/auction-cca-table.css
@@ -1,12 +1,13 @@
 .panel {
   /*width: inherit;*/
   margin: auto;
-  width: 425px;
+  width: auto;
   height: inherit;
   text-align: center;
+  display: inline-block;
 }
 .table {
-  width: inherit;
+  width: auto;
   margin-bottom: 0.5em;
 }
 .tips {
@@ -16,7 +17,7 @@
 }
 
 #bidTable {
-  width: 100%;
+  /*width: auto;*/
 /*font-size: 1em;*/
 }
 
