--- a/webapps/pages/cca/auction-cca.css
+++ b/webapps/pages/cca/auction-cca.css
@@ -1,16 +1,16 @@
 #auction-cca {
     margin: auto;
-    width: 700px;
+    width: auto;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-    box-shadow: 5px 5px 5px #d0d0d0;    
+    box-shadow: 5px 5px 5px #d0d0d0;   
+    display: inline-block; 
 
 }
 
 #table {
-    margin-right: 10px;
-    margin-left: 10px;
-    width: 700px;
+    
+   /* width: 700px;*/
     
 }
 
